Bug 58307 - FILESAVE sheet tab color isn't correctly exported to xlsx
Summary: FILESAVE sheet tab color isn't correctly exported to xlsx
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.4.3 release
Hardware: All All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.3.0 target:4.2.4
Keywords:
: 61639 62802 75275 (view as bug list)
Depends on:
Blocks: Sheet-Tabs-Bar
  Show dependency treegraph
 
Reported: 2012-12-14 17:23 UTC by zach
Modified: 2017-10-14 09:15 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
example excel spreadsheet with tab colours (7.74 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2012-12-21 16:45 UTC, john.pratt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description zach 2012-12-14 17:23:08 UTC
Sheet tab colors at the bottom of the screen do not save correctly.  If I open an Excel file in LO it will open correctly.  I then save the file, keeping the same file type, and when I then reopen it, the colors on the bottom sheet tabs are no longer there.
Comment 1 john.pratt 2012-12-21 16:44:34 UTC
I can reproduce this in 4.0 beta 2 with windows XP.
Example attached.

Steps to reproduce:
1. open the attached file in libreoffice
2. edit the file (e.g. type 1 in cell A1)
3. save the file (same file type)
4. close the file
5. reopen the file in libreoffice or excel

Current behaviour: no tab colours in either program

Expected behaviour: tab colour should be retained.
Comment 2 john.pratt 2012-12-21 16:45:04 UTC
Created attachment 71941 [details]
example excel spreadsheet with tab colours
Comment 3 Jorendc 2013-03-01 17:30:41 UTC
*** Bug 61639 has been marked as a duplicate of this bug. ***
Comment 4 Jorendc 2013-03-01 17:32:02 UTC
Even easier to reproduce:

* Open Calc
* Right click on tab
* Click 'Tab color...'
* Change color -> Ok
* Save file as xls(x)

Result: tab color lost

Reproduced using LibreOffice 4.0.1.1 rc on Linux Mint 14 x64
Comment 5 Kohei Yoshida 2014-03-08 08:13:53 UTC
*** Bug 62802 has been marked as a duplicate of this bug. ***
Comment 6 Kohei Yoshida 2014-03-14 00:06:16 UTC
Tab colors save fine to xls.  They are lost only when saving to xlsx.  I used the latest master.
Comment 7 Kohei Yoshida 2014-03-14 01:47:32 UTC
I'll take this.
Comment 8 Commit Notification 2014-03-14 02:51:44 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5063f31c248fd3c16115582a1e3aef182257a225

fdo#58307: Export sheet tab colors to xlsx.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2014-03-14 02:51:59 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=90af4f50e8673975e63c928aa47fbc18eb160046

fdo#58307: Write export test for this to ensure it won't go away...



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Kohei Yoshida 2014-03-14 02:55:39 UTC
Fixed. This was one of those TODO items as it turned out.
Comment 11 Commit Notification 2014-03-14 07:38:48 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=00b7d4c8043a0c6b9e267f0fd5d7389128628ca0&h=libreoffice-4-2

fdo#58307: Export sheet tab colors to xlsx.


It will be available in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Kohei Yoshida 2014-05-08 23:39:41 UTC
*** Bug 75275 has been marked as a duplicate of this bug. ***