fdo#58307: Export sheet tab colors to xlsx.

And let's not re-use Biff's XclExpWsbool record class to export <SheetPr>
elements.  That was a bit hacky...

Change-Id: Ia585f53d547af3d6840fce1b1244b60bb5076b07